[Refactor]코드 레빗 리뷰 반영